--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "jwt-decode": "^3.1.2",
+    "react-router-dom": "^6.2.1",
+    "graphql": "^15.4.0",
+    "@apollo/client": "^3.5.8",
+    "react-bootstrap": "^2.6.0",
+    "bootstrap": "^5.2.2"
+
   },
   "scripts": {
     "start": "react-scripts start",
