--- a/client/package.json
+++ b/client/package.json
@@ -4,20 +4,20 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
+    "@apollo/client": "^3.5.8",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "jwt-decode": "^3.1.2",
-    "react-router-dom": "^6.2.1",
+    "bootstrap": "^5.2.2",
     "graphql": "^15.4.0",
-    "@apollo/client": "^3.5.8",
+    "jwt-decode": "^3.1.2",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
-    "bootstrap": "^5.2.2"
-
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "5.0.1",
+    "react-sound": "^1.2.0",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
